Add implementation evidence screenshots